# VerseQuest

./: .eslintrc.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: shuttle-deployment.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/2023-05-27-103254_create_users/: down.sql  up.sql
backend/migrations/2023-05-27-103529_create_books/: down.sql  up.sql
backend/migrations/2023-05-27-103619_create_chapters/: down.sql  up.sql
backend/migrations/2023-05-27-103919_create_comments/: down.sql  up.sql
backend/migrations/2023-05-27-104353_create_reviews/: down.sql  up.sql
backend/migrations/2023-05-29-090323_create_users/: down.sql  up.sql
backend/migrations/2023-05-29-090411_create_books/: down.sql  up.sql
backend/migrations/2023-05-29-090456_create_chapters/: down.sql  up.sql
backend/migrations/2023-05-29-090551_create_comments/: up.sql
backend/migrations/2023-05-29-090628_create_reviews/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/api/: mod.rs  user.rs
backend/src/models/: User.rs  mod.rs  user.rs
frontend/: package-lock.json  tsconfig.json
src/components/: Editor.tsx
src/pages/: index.tsx  tk.tsx
