[package]
name = "versequest-be"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.uuid]
version = "1.3.3"
features = ["v4"]