[package]
name = "versequest-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.18"
axum-macros = "0.3.7"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1", features = ["postgres", "uuid"] }
diesel_migrations = "2.1"
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
ammonia = "3.3.0"

[dependencies.uuid]
version = "1.3.3"
features = ["v4", "serde"]